--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 80 --proxy-config proxy.conf.json --host 10.208.74.39",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
